syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

message User {
	string id = 1;
	string name = 2;
}

message Device {
	enum Type {
		UNKNOWN = 0;
		IOS = 1;
		ANDROID = 2;
	}

	string id = 1;
	Type type = 2;
	string push_token = 3;
}

message Room {
	string id = 1;
	string name = 2;
}

message Sensor {
	string id = 1;
	string name = 2;
	int64 last_measurement = 3;
	bool status = 4;
	google.protobuf.StringValue room_id = 5;
}

message Measurement {
	string id = 1;
	int64 timestamp = 2;
	int64 value = 3;
}

// SensorApiService is a service that handles user and sensor registration in addition to sensor measurments
//
// The following functions require the presence of an authorization header in the following form
//
// Authorization: Bearer Token
//
// where token is the access token returned by RegisterUser and LoginUser
service SensorApiService {
	// RegisterUser registers a new user if no user with the same name exists
	//
	// The method returns the new user and an access token for future requests
	rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
		option (google.api.http) = {
			post: "/v1/user/register",
			body: "*"
		};
	}

	// LoginUser tries to validate a username and password combination
	//
	// The method returns the existing user and an access token for future requests
	rpc LoginUser(RegisterUserRequest) returns (RegisterUserResponse) {
		option (google.api.http) = {
			post: "/v1/user/login",
			body: "*"
		};
	}
	
	// RegisterSensor links a sensor a user if it's not yet linked to another user
	//
	// The method returns the newly registered sensor
	rpc RegisterSensor(RegisterSensorRequest) returns (RegisterSensorResponse) {
		option (google.api.http) = {
			post: "/v1/user/{user_id}/sensor/register",
			body: "*"
		};
	}
	
	// UpdateSensor updates a sensors name, status and assosiated room
	//
	// The method returns the newly registered sensor
	rpc UpdateSensor(UpdateSensorRequest) returns (UpdateSensorResponse) {
		option (google.api.http) = {
			post: "/v1/user/{user_id}/sensor/{sensor_id}",
			body: "*"
		};
	}

	rpc ToggleSensor(ToggleSensorRequest) returns (ToggleSensorResponse) {
		option (google.api.http) = {
			post: "/v1/user/{user_id}/sensor/{sensor_id}/toggle",
			body: "*"
		};
	}

	rpc ListSensor(ListSensorRequest) returns (ListSensorResponse) {
		option (google.api.http) = {
			get: "/v1/user/{user_id}/sensor"
		};
	}

	rpc ShowSensor(ShowSensorRequest) returns (ShowSensorResponse) {
		option (google.api.http) = {
			get: "/v1/user/{user_id}/sensor/{sensor_id}"
		};
	}

	rpc DeleteSensor(DeleteSensorRequest) returns (DeleteSensorResponse) {
		option (google.api.http) = {
			delete: "/v1/user/{user_id}/sensor/{sensor_id}"
		};
	}

	rpc ListSensorMeasurement(ListSensorMeasurementRequest) returns (ListSensorMeasurementResponse) {
		option (google.api.http) = {
			get: "/v1/user/{user_id}/sensor/{sensor_id}/measurement"
		};
	}

	rpc UpdateSensorMeasurement(UpdateSensorMeasurementRequest) returns (UpdateSensorMeasurementResponse) {
		option (google.api.http) = {
			post: "/v1/user/{user_id}/sensor/{sensor_id}/measurement",
			body: "*"
		};
	}
}

message RegisterUserRequest {
	string name = 1;
	string password = 2;
}

message RegisterUserResponse {
	User user = 1;
	string token = 2;
}

message RegisterSensorRequest {
	string user_id = 1;
	string sensor_id = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.StringValue room_id = 4;
}

message RegisterSensorResponse {
	Sensor sensor = 1;
}

message UpdateSensorRequest {
	string user_id = 1;
	string sensor_id = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.StringValue room_id = 4;
	google.protobuf.BoolValue status = 5;
}

message UpdateSensorResponse {
	Sensor sensor = 1;
}

message ToggleSensorRequest {
	string user_id = 1;
	string sensor_id = 2;
	bool status = 3;
}

message ToggleSensorResponse {
	Sensor sensor = 1;
}

message ListSensorRequest {
	string user_id = 1;
}

message ListSensorResponse {
	repeated Sensor sensors = 1;
	repeated Room rooms = 2;
}

message ShowSensorRequest {
	string user_id = 1;
	string sensor_id = 2;
}

message ShowSensorResponse {
	Sensor sensor = 1;
	repeated Measurement measurements = 2;
}

message DeleteSensorRequest {
	string user_id = 1;
	string sensor_id = 2;
}

message DeleteSensorResponse {
	Sensor sensor = 1;
	repeated Measurement measurements = 2;
}

message ListSensorMeasurementRequest {
	string user_id = 1;
	string sensor_id = 2;
}

message ListSensorMeasurementResponse {
	repeated Measurement measurements = 1;
}

message UpdateSensorMeasurementRequest {
	string user_id = 1;
	string sensor_id = 2;

	repeated Measurement measurements = 3;
}

message UpdateSensorMeasurementResponse {
	// VOID
}

